--- a/Views/Shared/AdminLayout.cshtml
+++ b/Views/Shared/AdminLayout.cshtml
@@ -144,6 +144,13 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/Admin/Wendors"
+                               aria-expanded="false">
+                                <i class="fa fa-font text-light" aria-hidden="true"></i>
+                                <span class="hide-menu text-light">Wendor</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
                             <div class="dropdown">
                                 <a class="sidebar-link waves-effect waves-dark sidebar-link dropdown-toggle"
                                    href="#" role="button" id="orderReportDropdown" data-bs-toggle="dropdown"
@@ -153,7 +160,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="orderReportDropdown">
                                     <a class="dropdown-item" href="/Admin/OrderReport">Order Report</a>
-                                    <a class="dropdown-item" href="#" data-value="230" data-price="0">Payment Report</a>
+                                    <a class="dropdown-item" href="/Admin/paymentReport" data-value="230" data-price="0">Payment Report</a>
                                 </div>
                             </div>
                         </li>
