--- a/Views/User/ForgetPassword.cshtml
+++ b/Views/User/ForgetPassword.cshtml
@@ -76,7 +76,7 @@
                 var email = $("#Emailid").val();
                 var Newpassword = $("#newpass").val();
                 var ConfirmPassword = $("#confirmpass").val();
-
+                
                 if (email != "" && Newpassword == "" && ConfirmPassword == "") {
                     $.ajax({
                         url: '/User/VeryfiEmail',
@@ -101,12 +101,14 @@
                             alert('Error verifying email.');
                         }
                     });
+
                 } else if (email != "" && Newpassword != "" && ConfirmPassword != "") {
+                    debugger;
                     if (Newpassword.length < 6) {
                         alert('Please enter a password with at least 6 characters.');
                         return;
                     }
-                    if (ConfirmPassword = "")
+                    if (ConfirmPassword == "")
                     {
                         alert("please enter confirm password ")
                     }
@@ -136,7 +138,7 @@
             });
 
             // Keypress event for password fields
-            $("#newpass","#confirmpass").keypress(function (event) {
+            $("#newpass").keypress(function (event) {
                 var charCode = event.which || event.keyCode;
                 var charStr = String.fromCharCode(charCode);
 
