--- a/Views/Admin/OrderReport.cshtml
+++ b/Views/Admin/OrderReport.cshtml
@@ -2,6 +2,56 @@
     ViewData["Title"] = "OrderReport";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
+<style>
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+    .icon {
+        font-size: 24px;
+        margin-right: 10px;
+        color:white
+    }
+</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
 <div class="container-fluid">
     <h1>Order Report</h1>
     <div class="row bg-dark m-3 p-4">
@@ -17,27 +67,61 @@
             <label for="toDate" class="text-light">To Date</label>
             <input type="date" id="toDate" name="toDate" class="form-control">
         </div>
-        <div class="col-md-3">
+   
+        <div class="col-md-1">
             <label class="text-light">&nbsp;</label>
-            <input type="button" value="Search" class="btn btn-primary form-control" onclick="searchRecords()">
-            <input type="button" value="Excel" id="excelButton" class="btn btn-info form-control mt-4">
+            <input type="button" value="Search" class="btn btn-primary " onclick="searchRecords()">
 
+        </div>
+        <div class="col-md-2">
+            <label for="excel" class="text-light">&nbsp;</label><br />
+            <button id="excelButton" class="mx-2 btn btn-info"><i class='fas fa-file-excel fa-1x'></i></button>
+            <label for="excel" class="text-light">&nbsp;</label><br />
+            <button id="pdfButton" class="mx-2 btn btn-danger" style="float:right;margin-top:-38px;bg-danger"><i class='fas fa-file-pdf fa-1x'></i></button>
+
+        </div>
+
+    </div>
+  
+    <div id="searchResults" class="m-3">
+       
+    </div>
+    <div class="modal fade" id="myModal"  data-backdrop="static" data-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content" style="min-width:800px">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h5 class="modal-title">Ordered Item</h5>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <div id="itemreport" class="m-3">
+                        <!-- Content for your modal body goes here -->
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </div>
 
-    <div id="searchResults" class="m-3">
-        <!-- Search results will be populated here -->
-    </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+
 <script>
+
+    $(document).ready(function(){
+        searchRecords();
+    })
     function searchRecords() {
         var userId = $('#userId1').val();
         var fromDate = $('#fromDate').val();
         var toDate = $('#toDate').val();
-        debugger;
+
         $.ajax({
             url: '/Admin/PrtOrderReport',
             type: 'POST',
@@ -47,23 +131,70 @@
                 toDate: toDate
             },
             success: function (response) {
-                $("#searchResults").html(response);
+                if (response != null) {
+                    $("#searchResults").html(response);
+                } else {
+                    alert("Sorry, response is null");
+                }
             },
             error: function () {
-                // Handle error if needed
+                alert("Error fetching data");
             }
         });
     }
-    // Function to export data to Excel
+
+    function exportToPDF() {
+        var searchResults = document.getElementById('searchResults');
+        html2canvas(searchResults).then(canvas => {
+            var imgData = canvas.toDataURL('image/png');
+            var pdf = new jspdf.jsPDF();
+            var imgWidth = 210;
+            var pageHeight = 295;
+            var imgHeight = canvas.height * imgWidth / canvas.width;
+            var heightLeft = imgHeight;
+
+            var position = 0;
+
+            pdf.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+            heightLeft -= pageHeight;
+
+            while (heightLeft >= 0) {
+                position = heightLeft - imgHeight;
+                pdf.addPage();
+                pdf.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+                heightLeft -= pageHeight;
+            }
+            pdf.save('Order_Report.pdf');
+        });
+    }
+
     function exportToExcel() {
         var wb = XLSX.utils.table_to_book(document.getElementById('searchResults'), { sheet: "Sheet JS" });
         XLSX.writeFile(wb, 'Order_Report.xlsx');
     }
 
+    // Event handler for the PDF button
+    $('#pdfButton').click(function () {
+        
+        var searchResults = document.getElementById('searchResults');
+        // Check if searchResults is not empty before exporting to Excel
+        if (searchResults.innerHTML.trim().length > 0) {
+            exportToPDF();
+        } else {
+            alert("Sorry, response is null");
+        }
+    });
+
     // Event handler for the Excel button
-    $(document).ready(function () {
-        $('#excelButton').click(function () {
+    $('#excelButton').click(function () {
+        var searchResults = document.getElementById('searchResults');
+        // Check if searchResults is not empty before exporting to Excel
+        if (searchResults.innerHTML.trim().length > 0) {
             exportToExcel();
-        });
+        } else {
+            alert("Sorry, response is null");
+        }
     });
 </script>
+
+
