--- a/Views/Admin/PrtCategoryList.cshtml
+++ b/Views/Admin/PrtCategoryList.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<ShopingCart.Models.Category>
 <style>
     #table {
-        border: solid 5px;
-        border-top-color: #8B0000;
-        border-right-color: #8B0000;
-        border-bottom-color: #8B0000;
-        border-left-color: #8B0000;
+        border: solid 2px;
+        border-top-color: black;
+        border-right-color: black;
+        border-bottom-color: black;
+        border-left-color: black;
         width: 100%;
         border-collapse: collapse;
         font-family: Arial, sans-serif;
@@ -14,13 +14,13 @@
     }
 
         #table th, #table td {
-            border: solid 1px #8B0000; /* Dark border for table cells */
+            border: solid 1px black; /* Dark border for table cells */
             padding: 10px; /* Increased padding inside cells */
             text-align: left; /* Align text left within cells */
         }
 
         #table th {
-            background-color: #4B0082; /* Dark purple background color for headers */
+            background-color: black; /* Dark purple background color for headers */
             color: white; /* White text color for headers */
             font-weight: bold; /* Bold font for headers */
         }
