--- a/Views/Admin/prtVendor.cshtml
+++ b/Views/Admin/prtVendor.cshtml
@@ -1,9 +1,40 @@
 ﻿@model IEnumerable<ShopingCart.Models.Vendor>
 <style>
-  
+
+
+    #tblEmployee tr:nth-child(even) {
+        background-color: black;
+    }
+
+    #tblEmployee, th, td {
+        border: 1px solid white;
+    }
+
+        #tblEmployee tr:hover {
+            background-color: deeppink;
+        }
+
+    body {
+        background: black;
+    }
+
+    .a {
+        background: white;
+        height: 1030px;
+        width: 500px;
+        margin: 100px auto;
+        border-radius: 30px
+    }
+
+    
+
+    input[type=submit] {
+        color: white;
+    }
+
     #table {
         border: solid 2px;
-        border-top-color:black;
+        border-top-color: black;
         border-right-color: black;
         border-bottom-color: black;
         border-left-color: black;
@@ -11,7 +42,7 @@
         border-collapse: collapse;
         font-family: Arial, sans-serif;
         font-size: 14px;
-        text-align: center;
+        background-color: #ddddee; /* Light grayish-blue background color */
     }
 
         #table th, #table td {
@@ -29,23 +60,6 @@
         #table tbody tr:nth-child(even) {
             background-color: #f0f0f0; /* Light gray alternate row color */
         }
-        tr{
-            font-weight:bold;
-            text-align:center;
-            
-        }
-
-   
-    td a:hover::after {
-        content: "click for show Order Item";
-        position: absolute;
-        background-color: #f0f0f0;
-        padding: 5px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 12px;
-        color: #333;
-    }
 
 
 </style>
@@ -60,7 +74,8 @@
             <th>Entry Date</th>
             <th>Modify Date</th>
             <th>Status</th>
-            <th>Action</th>
+            <th>Edit </th>
+            <th>Delete </th>
             
         </tr>
     </thead>
@@ -78,8 +93,10 @@
 
                
                 <td>
-                    <button class='btn btn-success' onclick='GetVendorById(@item.Id)' data-toggle="modal" data-target="#Modal">Edit</button>
-                    <button class='btn btn-danger delete-btn' data-id="" onclick="if(confirm('Are you sure you want to delete?')) { DeleteVendor(@item.Id) }">Delete</button>
+                    <button class='btn btn-success' onclick='getVendorById(@item.Id)' data-toggle="modal" data-target="#Modal">Edit</button>
+                </td>
+                <td>
+                    <button class='btn btn-danger delete-btn' data-id="" onclick="if(confirm('Are you sure you want to delete?')) { deleteVendornById(@item.Id) }">Delete</button>
                 </td>
             </tr>
         }
