--- a/Views/User/myProfile.cshtml
+++ b/Views/User/myProfile.cshtml
@@ -174,6 +174,21 @@
                 });
             }, false);
         })();
+        function alphabetOnly(event) {
+            var inputElement = event.target;
+            var value = inputElement.value;
+            inputElement.value = value.replace(/[^A-Za-z\s]+/g, '').replace(/\s+/g, ' ');
+            var isValid = /^[A-Za-z\s]+$/.test(inputElement.value);
+            // Assuming you want to do something with isValid, like validation
+            console.log(isValid); // Example: Log the validation result
+        }
+
+        // Assuming you have input elements with id="vendor_Name"
+        var inputElements = document.querySelectorAll("#name"); // Use querySelectorAll for ID selector
+        inputElements.forEach(function (inputElement) {
+            inputElement.addEventListener("input", alphabetOnly);
+        });
+
     </script>
 
 
